2004-08-04  Marius Groeger <mgroeger@sysgo.com>

	* rtai-core/arch/arm/patches/updates/clps711x-init_irq_flush.patch:
	Properly flush to Linux the pending IRQs that have been caught
	while initializing RTAI.

	* rtai-core/arch/arm/patches/updates/clps711x-compile.patch: Fix
	compilation issues.

2004-08-02  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/arch/i386/patches: Upgrade the x86 patch to
	2.6.7r6c5.

2004-07-28  Paolo Mantegazza  <mantegazza@aero.polimi.it>

        * rtai-core/include/asm-i386/rtai_hal.h: optimised interrupt
	disabling/enabling and related flags management for UP. 

        * rtai-core/sched/rtai/sched_up.c, rtai-core/sched/rtai/sched_mup.c
	rtai-core/sched/rtai/sched_smp.c, rtai-core/sched/rtai/sched_lxrt.c:
	avoid changing sign to zero in time conversions.

2004-07-25  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: rtai-3.1 test #4

2004-07-24  Philippe Gerum  <rpm@xenomai.org>

	* configure.in, rtai-core/arch/*/Kconfig: Make RTAI_USI depend on
	RTAI_SEM && RTAI_TASKLETS.
	
	* rtai-core/ipc/fifos/fifos.c (mbx_sem_wait): Remove spurious
	rtf_restore_flags(); this bug used to wreck the preemption count
	with a preemptible kernel, and forcibly release a non-held
	spinlock in any case, which is always a bad idea...

	* configure.in: Allow CONFIG_FRAME_POINTER in kernel.

2004-07-23  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/arch/i386/hal/hal.c (rtai_trap_fault): Fix the
	conditional section mess.

2004-07-20  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/arch/i386/patches: Upgrade the x86 patch to
	2.6.7r6c4.

2004-07-19  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/rtai/sched_lxrt.c: Do not escalate the
	rescheduling requests for LXRT; this breaks.

	* rtai-core/arch/i386/patches: Upgrade the x86 patch to
	2.6.7r6c3.

	* rtai-core/sched/rtai/sched_lxrt.c (rt_schedule_soft,
	give_back_to_linux, lxrt_migration_handler, kthread_m): Rework
	interrupt masking and critical sections.
