@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.57)
 
-AC_INIT(rtai,3.1-test4,rtai@rtai.org)
+AC_INIT(rtai,3.1-test5,rtai@rtai.org)
 
 CONFIG_RTAI_VERSION_MAJOR=3
 CONFIG_RTAI_VERSION_MINOR=0
@@ -668,6 +668,20 @@ AC_ARG_ENABLE(cplusplus,
 	esac])
 AC_MSG_RESULT(${CONFIG_RTAI_CPLUSPLUS:-no})
 
+AC_MSG_CHECKING([if gcc accepts -fno-use-cxa-atexit])
+save_CXXFLAGS="$CXXFLAGS"
+CXXFLAGS="-fno-use-cxa-atexit -Werror"
+AC_CACHE_VAL(ac_cv_accepts_cxa_atexit,
+AC_LANG_SAVE
+AC_LANG_CPLUSPLUS
+[AC_TRY_COMPILE([],
+[int i = 0; return i; ],
+[ac_cv_accepts_cxa_atexit=yes],
+[ac_cv_accepts_cxa_atexit=no])]
+AC_LANG_RESTORE)
+AC_MSG_RESULT($ac_cv_accepts_cxa_atexit)
+CXXFLAGS="$save_CXXFLAGS"
+
 AC_MSG_CHECKING(for comedi support over LXRT)
 AC_ARG_ENABLE(comedi-lxrt,
 	[ --enable-comedi-lxrt	Enable comedi/LXRT support],
@@ -1115,7 +1129,7 @@ fi
 
 dnl Kbuild is not quite C++ friendly these days.
 if test x$CONFIG_KBUILD = xy -a x$CONFIG_RTAI_CPLUSPLUS = xy ; then
-   AC_MSG_ERROR([In-kernel C++ support is not currently available with Linux >= 2.6.x])
+   AC_MSG_ERROR([In-kernel C++ support is not available with Linux >= 2.6.x])
 fi
 
 dnl
@@ -1435,6 +1449,10 @@ esac
 if test x$CONFIG_RTAI_KMOD_DEBUG = xy; then
    RTAI_KMOD_CFLAGS="-g $RTAI_KMOD_CFLAGS"
    RTAI_KMOD_CXXFLAGS="-g $RTAI_KMOD_CXXFLAGS"
+fi
+
+if [[ $ac_cv_accepts_cxa_atexit = yes ]]; then
+   RTAI_KMOD_CXXFLAGS="$RTAI_KMOD_CXXFLAGS -fno-use-cxa-atexit"
 fi
 
 dnl Ok, the following isn't pretty, but required to process the
