@@ -1,3 +1,7 @@
+2004-08-04  Malte Cornils <mcornils@fzi.de>
+
+	* rtai-addons/cpp: Fix compilation and runtime support issues.
+
 2004-08-04  Marius Groeger <mgroeger@sysgo.com>
 
 	* rtai-core/arch/arm/patches/updates/clps711x-init_irq_flush.patch:
